=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0 CA
 - Added:  Shared Note Support (Also when in Add Census Event mode - removed conversion from Shared to inline Note) (windmillway)
 - Merged: Merge changes r4969 - r5062 from the trunk. (windmillway)
 - Merged: Merge changes r4942 - r4969 from the trunk. (windmillway)
 - Changed: Changes to enable Create New Shared Note (Only partially complete - more to do) (windmillway)
 - Merged: Merge changes r4939 - r4942 from the trunk. (windmillway)
 - Merged: Merge changes r4937 - r4938 from the trunk. (Picked up missing r4938 on last merge) (windmillway)
 - Merged: Merge changes r4936 - r4937 from the trunk. (Picked up missing r4936 on last merge) (windmillway)
 - Merged: Merge changes r4894 - r4935 from the trunk (windmillway)
 - Added: New Census Birthplace function for Census Assistant (windmillway)
 - Changed: Corrected Shared Note View first line, added various aesthetic changes. (windmillway) 
 - Merged: Merge changes r4762 - r4893 from the trunk (windmillway)
 - Added: New Shared Note List (from List Menu) and links to individual Shared Notes. (windmillway)
 - Changed: Census Assistant Shared Note delimiter from ";" to "|" (windmillway)


Version 4.2.1
 - Fixed: [ 2556004 ] 4.2.0 - Reports without data output (fisharebest)
 - Fixed: [ 2562498 ] 4993 General Search - last change (fisharebest)
 - Fixed: [ 2555000 ] 4.2 Anniversary Calendar no privacy rules (fisharebest)
 - Added: [ 2522082 ] Go To Merged Record (fisharebest)
 - Added: [ 2580275 ] 4.2 R.A. improved functionality for Autosearch on Ancestry (erostew/fisharebest)
 - Fixed: [ 2567372 ] Admin does not always see changes to approve correctly (fisharebest)
 - Fixed: [ 2328664 ] Research Assistent (fisharebest)